# knock-knock

./: .gitignore  README.md  README.txt  blast.py  britt_layout.py  coherence.py  collapse.py  collapse_cython.pyx  demultiplex.py  experiment.py  jin_layout.py  knock_knock  layout.py  modal_template.tpl  pacbio.py  pacbio_experiment.py  pooled_layout.py  pooled_screen.py  process_knockin_experiment  pyproject.toml  pytest.ini  quantiles.py  range_picker.py  setup.py  svg.py  table.py  target.py  target_info.py  tcell_layout.py  visualize.py
docs/: advanced_target_specification.md  manual_target_creation.md  pegRNAs.md  strategy.txt  visualization.md
knock_knock/: Bxb1_layout.py  HDR_layout.py  TECseq_layout.py  arrayed_experiment_group.py  blast.py  build_strategies.py  build_targets.py  cli.py  common_sequences.py  demultiplex_by_genotype.py  editing_strategy.py  effector.py  experiment.py  experiment_group.py  explore.py  illumina_experiment.py  integrase_layout.py  integrases.py  knock-knock  knock_knock  layout.py  length_bias_experiment.py  lengths.py  modal_template.tpl  nanopore_experiment.py  outcome.py  outcome_record.py  pacbio_experiment.py  paired_end_experiment.py  parallel.py  pegRNAs.py  prime_editing_experiment.py  prime_editing_layout.py  ranges.py  read_outcome.py  seeseq_layout.py  svg.py  table.py  target_info.py  twin_prime_layout.py  (+2 more)
knock_knock/architecture/: ENDseq.py  HDR.py  TECseq.py  __init__.py  integrase.py  prime_editing.py  seeseq.py  twin_prime.py
knock_knock/example_data/: index_locations.yaml
knock_knock/modal_template/: conf.json
(+632 files in other folders)
